# moss

./: .gitignore  Cargo.toml
moss-client/: Cargo.toml  Readme.adoc  _Cargo.toml
moss-client/src/: linux.rs  main.rs  structures.rs
moss-client/tmp/: test.json
moss-lib/: Cargo.toml  lib.rs  structures.rs
moss-lib/src/: structures.rs
moss-server/: .env  Cargo.toml  Readme.adoc  _Cargo.toml
moss-server/moss-backend/: Cargo.toml  Readme.adoc  _Cargo.toml
moss-server/moss-backend/database/: Dockerfile  start_db.sh
moss-server/moss-backend/database/sql_scripts/: create_db.sql
moss-server/moss-backend/src/: handler.rs  main.rs
moss-server/moss-frontend/: .env  .env.local  .gitignore  Cargo.toml  Readme.adoc  Trunk.toml  _Cargo.toml  config.env  index.html  next.config.js  package-lock.json  package.json
moss-server/moss-frontend/app/: layout.tsx  navbar.tsx  page.tsx  teams-list.tsx
moss-server/moss-frontend/app/components/: navbar.tsx  teams-list.tsx
moss-server/moss-frontend/app/config-page/: config-api.tsx  config-json.module.scss  config-json.tsx  config-mossdata-form.tsx  layout.tsx  os-configs.tsx  page.tsx
moss-server/moss-frontend/app/styles/: config-page.module.scss  navbar.module.scss  page.module.scss
moss-server/moss-frontend/css/: style.scss
moss-server/moss-frontend/src/: main.rs  yew_main.rs
moss-server/src/: main.rs
tmp/: test.json
