[package]
name = "moss-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "moss-backend"
path = "moss-backend/src/main.rs"

[[bin]]
name = "moss-frontend"
path = "moss-frontend/src/main.rs"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
moss-lib = {path = "../moss-lib"}
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
