[package]
name = "moss-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-web = { version = "4.4.0", features = ["rustls", "rustls-0_21"] }
moss-lib = { path = "../../moss-lib" }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
dotenv = "0.15.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "mysql"] }
chrono = "0.4.30"
rustls-pemfile = "1.0.3"
rustls = "0.21.7"
colored = "2.0.4"
